[package]
name = "mqtt_discord_relay"
version = "0.1.0"
authors = ["David Weis <davidmichaelweis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzmq = { git = "https://github.com/dmweis/libzmq-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqtt = "0.31.0"
simplelog = "0.7"
log = "0.4"
